--- a/src/modules/quiz/quiz.scss
+++ b/src/modules/quiz/quiz.scss
@@ -2,7 +2,7 @@
     position: relative;   
     padding: 30px;
     margin: 30px auto;
-    max-width: 1000px;
+    max-width: 1100px;
     background-color: #ebedf2;
     border-radius: 15px;
     -webkit-box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.45);
@@ -31,9 +31,10 @@
     &__answers {
         display: flex;
         align-items: stretch;
+        flex-wrap: wrap;
+        justify-content: space-around;
     }
     &__answer {
-        display: inline-block;
         font-size: 23px;
         cursor: pointer;
         padding: 10px 20px;
@@ -50,8 +51,8 @@
             box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.44);
         }
         img {
-            width: 200px;
-            height: 200px;
+            max-width: 200px;
+            max-height: 200px;
         }
     }
     &__final {
