--- a/src/_scss/zt.scss
+++ b/src/_scss/zt.scss
@@ -11,6 +11,9 @@ $zt-green: #73bd4c;
         position: relative;
         z-index: 1;
         border: 1px;
+        @include breakpoint(xs) {
+            width:100%;
+        }
         &:before {
             background-image: linear-gradient(45deg, #4a9323 0%, #84c835 100%);
             border-radius: inherit;
@@ -35,14 +38,17 @@ $zt-green: #73bd4c;
         }
     }
     &footer {
+        padding: 0 20px;
         .link {
             line-height: 2;
+            white-space: nowrap;
         }
         .copyr {
             font-size: 14px;
             vertical-align: middle;
             line-height: 3;
             color: #b3b4b8;
+            white-space: nowrap;
         }
     }
 }
